--- a/Style2.css
+++ b/Style2.css
@@ -103,11 +103,12 @@
         {
             width: auto;
             height: auto;
+            padding-right:10px;
 
         }
          footer
          {      
-            position:absolute;
+            position:fixed;
              bottom:0;
               right:0;
              
