--- a/Style2.css
+++ b/Style2.css
@@ -111,6 +111,7 @@
             position:fixed;
              bottom:0;
               right:0;
+                padding-right:10px;
              
          }
           table 
