--- a/Style2.css
+++ b/Style2.css
@@ -93,7 +93,7 @@
         {
             position: relative;
            background-color: black;
-           background-image: url(images/indexbackground2b.jpg);
+           background-image: url(images/indexbackground3.jpg);
            background-repeat: no-repeat;
            background-size: cover;
            background-attachment: fixed;
