--- a/Style2.css
+++ b/Style2.css
@@ -112,6 +112,7 @@
              bottom:0;
               right:0;
                 padding-right:10px;
+                 padding-left:10px;
                  background-image: url(images/transparency.png);
             background-repeat: no-repeat;
             background-size: cover;
