--- a/Style2.css
+++ b/Style2.css
@@ -24,8 +24,61 @@
             font-family: audimat, Verdana, Helvetica, sans-serif;
            
         }
+       
+         .dropbtn 
+        {
+            background-color: #8DA1B9;
+            color: #D8D8F6;
+            border-color: #EF959D;  
+            border: solid 2px #7AE7C7;
+            border-radius: 1px;
+            font-size: x-large;
+            font-family: audimat, Verdana, Helvetica, sans-serif;
+            cursor: pointer;
+        }
+
+        .dropdown 
+        {
+             position: relative;
+             display: inline-block;
+        }
+
+        .dropdown-content 
+        {
+             display: none;
+             position: absolute;
+             right: 0;
+             background-color: #f9f9f9;
+             min-width: 160px;
+             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+             z-index: 1;
+        }
+
+        .dropdown-content a 
+        {
+             color: black;
+             padding: 12px 16px;
+             text-decoration: none;
+             display: block;
+        }
+
+        .dropdown-content a:hover 
+        {
+            background-color: #f1f1f1;
+
+        }
+
+        .dropdown:hover .dropdown-content 
+        {
+             display: block;
+        }
+
+        .dropdown:hover .dropbtn 
+        {
+             background-color: #3e8e41;
+        }
         
-          td
+        td
         {
              border: 4px solid;
              border-bottom: none;
@@ -280,7 +333,7 @@
 
         
         
-        .overlay{position:fixed; top: 0; left:0; height:100%; z-index: 1; overflow: auto; padding-top: 2%; transition: 0.5s;}     
+        .overlay{position:fixed; top: 0; left:0; height:10%; z-index: 1; overflow: auto; padding-top: 2%; transition: 0.5s;}     
        
          @font-face 
         {
