--- a/Style2.css
+++ b/Style2.css
@@ -45,6 +45,8 @@
 
         .dropdown-content 
         {
+             background-image: url(images/transparency.png);
+             background-size: cover;
              display: none;
              position: absolute;
              right: 0;
@@ -62,18 +64,18 @@
 
         .dropdown-content a:hover 
         {
-            background-color: #f1f1f1;
-
+           background-color: #7AE7C7;
+             color: #8DA1B9;     
         }
 
         .dropdown:hover .dropdown-content 
         {
              display: block;
         }
-
+        
         .dropdown:hover .dropbtn 
         {
-             background-color: #3e8e41;
+             
         }
         
         td
