--- a/Style2.css
+++ b/Style2.css
@@ -30,9 +30,7 @@
              transition-duration: 0.5s; 
             background-color: #8DA1B9;
             color: #D8D8F6;
-            border-color: #EF959D;  
-            border: solid 2px #7AE7C7;
-            border-radius: 1px;
+            border: solid 1px #EF959D;
             font-size: x-large;
             font-family: audimat, Verdana, Helvetica, sans-serif;
             cursor: pointer;
@@ -60,7 +58,7 @@
 
         .dropdown-content a 
         {
-             padding: 12px 12px;
+             padding: 6px 6px;
              text-decoration: none;
              display: block;
         }
