--- a/Style2.css
+++ b/Style2.css
@@ -17,7 +17,8 @@
             margin-top: 10px;
             margin-bottom: 10px;          
             color: #D8D8F6;
-            background-color: #8DA1B9;
+            background-image: url(images/transparency.png);
+             background-size: cover;
             border: solid 2px #7AE7C7;
             border-radius: 1px;
             font-size: x-large;
@@ -25,12 +26,25 @@
            
         }
        
-         .dropbtn 
+         .dropbtn1 
         {
-             transition-duration: 0.5s; 
-            background-color: #8DA1B9;
+              background-image: url(images/transparency.png);
+             background-size: cover;
+             transition-duration: 0.5s;          
             color: #D8D8F6;
             border: solid 1px #EF959D;
+            font-size: x-large;
+            font-family: audimat, Verdana, Helvetica, sans-serif;
+            cursor: pointer;
+        }
+
+         .dropbtn2 
+        {
+              background-image: url(images/transparency.png);
+             background-size: cover;
+             transition-duration: 0.5s; 
+            color: #D8D8F6;
+            border: solid 1px #7AE7C7;
             font-size: x-large;
             font-family: audimat, Verdana, Helvetica, sans-serif;
             cursor: pointer;
@@ -58,7 +72,7 @@
 
         .dropdown-content a 
         {
-             padding: 6px 6px;
+             padding: 2px 2px;
              text-decoration: none;
              display: block;
         }
@@ -71,12 +85,13 @@
 
         .dropdown:hover .dropdown-content 
         {
+             transition-duration: 0.5s; 
              display: block;
         }
         
         .dropdown:hover .dropbtn 
         {
-             
+              background-color: #7AE7C7;
         }
         
         td
