--- a/Style2.css
+++ b/Style2.css
@@ -28,6 +28,8 @@
        
          .dropbtn1 
         {
+             margin-top: 10px;
+            margin-bottom: 10px;  
               background-image: url(images/transparency.png);
              background-size: cover;
              transition-duration: 0.5s;          
@@ -40,6 +42,8 @@
 
          .dropbtn2 
         {
+             margin-top: 10px;
+            margin-bottom: 10px;  
               background-image: url(images/transparency.png);
              background-size: cover;
              transition-duration: 0.5s; 
