--- a/Style2.css
+++ b/Style2.css
@@ -8,7 +8,7 @@
          a:hover:not(.active)
         {           
             background-color: #7AE7C7;
-             color: #8DA1B9;          
+             color: #D8D8F6;         
         }             
         
         a
@@ -84,7 +84,7 @@
         .dropdown-content a:hover 
         {
            background-color: #7AE7C7;
-             color: #8DA1B9;     
+             color: #D8D8F6;     
         }
 
         .dropdown:hover .dropdown-content 
