--- a/Style2.css
+++ b/Style2.css
@@ -25,7 +25,9 @@
            
         }
        
-         .dropbtn1 
+        .overlay{position:fixed; top: 0; left:0; height:10%; z-index: 1; overflow: auto; padding-top: 2%; transition: 0.5s;}
+         
+        .dropbtn1 
         {
               
               background-image: url(images/transparency.png);
@@ -58,7 +60,12 @@
         .dropdown 
         {
             transition-duration: 0.25s; 
-             position: relative;
+             top: 0; 
+             left:0; 
+             z-index: 1; 
+             overflow: auto; 
+             padding-top: 2%;
+             position: fixed;
              display: inline-block;
         }
 
@@ -353,7 +360,7 @@
 
         
         
-        .overlay{position:fixed; top: 0; left:0; height:10%; z-index: 1; overflow: auto; padding-top: 2%; transition: 0.5s;}     
+             
        
          @font-face 
         {
