--- a/Style2.css
+++ b/Style2.css
@@ -65,7 +65,7 @@
              z-index: 1; 
              overflow: auto; 
              padding-top: 2%;
-             position: fixed;
+             position: absolute;
              display: inline-block;
         }
 
