--- a/Style2.css
+++ b/Style2.css
@@ -100,9 +100,9 @@
              display: block;
         }
         
-        .dropdown:hover .dropbtn 
+        .dropdown:hover .dropbtn1 
         {
-              background-color: #7AE7C7;
+              background-color: #EF959D;
         }
         
         td
