--- a/Style2.css
+++ b/Style2.css
@@ -67,6 +67,7 @@
              padding-top: 2%;
              position: absolute;
              display: inline-block;
+             height:10%;
         }
 
         .dropdown-content 
