--- a/Style2.css
+++ b/Style2.css
@@ -68,7 +68,7 @@
              position: absolute;
              display: inline-block;
              height:100%;
-             width: 20%;
+             width: auto;
         }
 
         .dropdown-content 
