--- a/Style2.css
+++ b/Style2.css
@@ -65,7 +65,7 @@
              z-index: 1; 
              overflow: auto; 
              padding-top: 1%;
-             position: absolute;
+             position: fixed;
              display: inline-block;
              height:100%;
              width: auto;
