--- a/Style2.css
+++ b/Style2.css
@@ -12,6 +12,7 @@
         
         a
         {     
+            padding:5px;
             transition-duration: 0.25s;      
             margin-top: 5px;
             margin-bottom: 5px;          
@@ -35,7 +36,7 @@
              transition-duration: 0.5s;          
             color: #D8D8F6;
             border: solid 2px #EF959D;
-            min-width: 8%;
+            min-width: 10%;
             padding: 5px;
             text-align:left;
             font-size: x-large;
@@ -68,7 +69,7 @@
              position: fixed;
              display: inline-block;
              height: 100%;
-             width: 8%;
+             width: 10%;
         }
 
         .dropdown-content 
@@ -79,7 +80,7 @@
              display: none;
              position: absolute;
              right: 0;
-             min-width: 8%;
+             min-width: 10%;
              box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
              z-index: 1;
         }
