--- a/Style2.css
+++ b/Style2.css
@@ -66,7 +66,7 @@
              z-index: 1; 
              overflow: auto; 
              padding-top: 1%;
-             position: fixed;
+             position: absolute;
              display: inline-block;           
              width: 10%;
         }
