--- a/Style2.css
+++ b/Style2.css
@@ -66,9 +66,9 @@
              z-index: 1; 
              overflow: auto; 
              padding-top: 1%;
-             position: absolute;
+             position: relative;
              display: inline-block;           
-             width: 10%;
+             min-width: 10%;
         }
 
         .dropdown-content 
