--- a/Style2.css
+++ b/Style2.css
@@ -76,7 +76,7 @@
              right: 0;            
              box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
              z-index: 1;
-             min-width:120px;
+             min-width:9%;
         }
 
         .dropdown-content a 
