--- a/Style2.css
+++ b/Style2.css
@@ -27,6 +27,8 @@
         }
        
         .overlay{position:fixed; top: 0; left:0; height:10%; z-index: 1; overflow: auto; padding-top: 2%; transition: 0.5s;}
+
+        .overlayRight{position:fixed; top: 0; left:0; height:10%; z-index: 1; overflow: auto; padding-top: 2%; transition: 0.5s;}
          
         .dropbtn1 
         {
