--- a/Style2.css
+++ b/Style2.css
@@ -119,7 +119,7 @@
              display: block;
         }
 
-        .dropdown:hover .dropdown-content2 
+        .dropdown2:hover .dropdown-content2 
         {
              transition-duration: 0.5s; 
              display: block;
@@ -130,7 +130,7 @@
               background-color: #EF959D;
         }
 
-         .dropdown:hover .dropbtn2 
+         .dropdown2:hover .dropbtn2 
         {
               background-color: #EF959D;
         }
