--- a/Style2.css
+++ b/Style2.css
@@ -1,4 +1,50 @@
-﻿       a.active
+﻿       
+.dropbtn2 {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn2:hover, .dropbtn2:focus {
+    background-color: #3e8e41;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown2 {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content2 {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content2 a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
+
+a.active
         {           
              
              color: #D8D8F6;
@@ -80,46 +126,15 @@
              box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
              z-index: 1;
              min-width: 150px;
-        }
-
-        .dropdown-content2 
-        {
-            transition-duration: 0.5s; 
-             background-image: url(images/transparency.png);
-             background-size: cover;
-             display: none;
-             position: absolute;
-             right: 0;            
-             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-             z-index: 1;
-             min-width: 150px;
-        }
+        }      
 
         .dropdown-content a 
         {             
              text-decoration: none;
              display: block;
-        }
-
-        .dropdown-content2 a 
-        {             
-             text-decoration: none;
-             display: block;
-        }
-
-        .dropdown-content  .dropdown-content2 a:hover 
-        {
-           background-color: #7AE7C7;
-             color: #D8D8F6;     
-        }
+        } 
 
         .dropdown:hover .dropdown-content 
-        {
-             transition-duration: 0.5s; 
-             display: block;
-        }
-
-        .dropdown2:hover .dropdown-content2 
         {
              transition-duration: 0.5s; 
              display: block;
@@ -128,12 +143,7 @@
         .dropdown:hover .dropbtn1 
         {
               background-color: #EF959D;
-        }
-
-         .dropdown2:hover .dropbtn2 
-        {
-              background-color: #EF959D;
-        }
+        }  
         
         td
         {
