--- a/Style2.css
+++ b/Style2.css
@@ -15,7 +15,7 @@
 
 /* Dropdown button on hover & focus */
 .dropbtn2:hover, .dropbtn2:focus {
-    background-color: #7AE7C7;
+    background-color: #EF959D;
 }
 
 /* The container <div> - needed to position the dropdown content */
