--- a/Style2.css
+++ b/Style2.css
@@ -14,7 +14,7 @@
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn2:hover, .dropbtn2:focus {
+.dropbtn2:hover, .dropbtn2 {
     background-color: #EF959D;
 }
 
