--- a/Style2.css
+++ b/Style2.css
@@ -31,7 +31,7 @@
              background-size: cover;
              display: none;
              position: absolute;
-             right: 0;            
+             left: 0;            
              box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
              z-index: 1;
              min-width: 150px;
