--- a/Style2.css
+++ b/Style2.css
@@ -65,7 +65,8 @@
             color: #D8D8F6;
             border: solid 2px #7AE7C7;
              min-width: 122px;
-          
+            padding: 0;
+            margin: 0;
             text-align:left;
             font-size: x-large;
             font-family: audimat, Verdana, Helvetica, sans-serif;
