--- a/Style2.css
+++ b/Style2.css
@@ -12,6 +12,7 @@
             border: solid 2px #EF959D;
              min-width: 90px;
             padding: 5px;
+            margin-bottom:0;
             text-align:left;
             font-size: x-large;
             font-family: audimat, Verdana, Helvetica, sans-serif;
