--- a/Style2.css
+++ b/Style2.css
@@ -107,8 +107,7 @@
 
 .dropdown2:hover .dropbtn2 
         {
-              background-color: #EF959D;
-              border-color: #EF959D;
+              background-color: #7AE7C7;             
         }  
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
