--- a/Style2.css
+++ b/Style2.css
@@ -173,7 +173,7 @@
         
         h1, h2, h3{
 
-            text-shadow: 1px 1px #ff0000;
+            text-shadow: 1px 1px #161616;
         }
           img.picture
          {
