--- a/Style2.css
+++ b/Style2.css
@@ -171,9 +171,19 @@
             margin-bottom: 5px;
         }
         
-        h1, h2, h3{
+        h1{
+
+            text-shadow: 1px 1px #EF959D;
+        }
+
+        h2{
 
             text-shadow: 1px 1px #161616;
+        }
+
+        h3{
+
+            text-shadow: 1px 1px #EF959D;
         }
           img.picture
          {
