--- a/Style2.css
+++ b/Style2.css
@@ -173,17 +173,17 @@
         
         h1{
 
-            text-shadow: 1px 1px #EF959D;
+            text-shadow: 2px 2px #EF959D;
         }
 
         h2{
 
-            text-shadow: 1px 1px #161616;
+            text-shadow: 2px 2px #D8D8F6;
         }
 
         h3{
 
-            text-shadow: 1px 1px #EF959D;
+            text-shadow: 1px 1px  rgba(0,0,0,0.2);
         }
           img.picture
          {
