--- a/Style2.css
+++ b/Style2.css
@@ -171,15 +171,10 @@
             margin-bottom: 5px;
         }
         
-        h1{
+        h1, h2{
 
             text-shadow: 2px 2px #EF959D;
-        }
-
-        h2{
-
-            text-shadow: 2px 2px #D8D8F6;
-        }
+        }      
 
         h3{
 
