--- a/Style2.css
+++ b/Style2.css
@@ -178,7 +178,7 @@
 
         h3{
 
-            text-shadow: 1px 1px  rgba(0,0,0,0.2);
+            text-shadow: 2px 2px  rgba(0, 0, 0, 0.74);
         }
           img.picture
          {
