--- a/Style2.css
+++ b/Style2.css
@@ -415,7 +415,7 @@
          @font-face 
         {
             font-family: spaceman;
-            src: url(fonts/spaceman.ttf) format('truetype');
+            src: url(fonts/venus rising rg.ttf) format('truetype');
         }
 
           @font-face 
