--- a/Style2.css
+++ b/Style2.css
@@ -5,7 +5,7 @@
          @font-face 
         {
             font-family: spaceman;
-            src: url(fonts/spaceman.otf);
+            src: url(fonts/spaceman.ttf);
         }
 
           @font-face 
