--- a/Style2.css
+++ b/Style2.css
@@ -84,7 +84,7 @@
   height: 13px;
   width: 13px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: #D8D8F6;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
