--- a/Style2.css
+++ b/Style2.css
@@ -20,7 +20,7 @@
 .slideshow-container {
   max-width: 1000px;
   position: relative;
-  padding: 0px;
+  padding-bottom: -5px;
   margin: auto;
   margin-bottom:20px;
    margin-top:20px;
