--- a/Style2.css
+++ b/Style2.css
@@ -32,6 +32,7 @@
 .slideshow-container {
   max-width: 1000px;
   position: relative;
+  z-index: 1;
   padding-bottom: -10px;
   margin: auto;
   margin-bottom:20px;
