--- a/Style2.css
+++ b/Style2.css
@@ -33,7 +33,7 @@
   max-width: 1000px;
   position: relative;
   z-index: 1;
-  padding-bottom: -10px;
+  padding: 0px;
   margin: auto;
   margin-bottom:20px;
    margin-top:20px;
