--- a/MainStyle.css
+++ b/MainStyle.css
@@ -1,6 +1,6 @@
 ﻿body 
 {
-     background-image: url(images/Stars.jpg);
+     background-image: url(srimages/Stars.jpg);
      background-repeat: no-repeat;
      background-size: cover;
 }
