--- a/MainStyle.css
+++ b/MainStyle.css
@@ -1,5 +1,6 @@
 ﻿body 
 {
+    background-color: black;
      background-image: url(srimages/Stars.jpg);
      background-repeat: no-repeat;
      background-size: cover;
