--- a/MainStyle.css
+++ b/MainStyle.css
@@ -19,42 +19,90 @@ body
 
 }
 
+.message
+{
+    visibility:visible;
+    position:fixed;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 15%;
+    width: 70%;
+    font-size:50px;
+    text-align:center;
+    align-content:center;
+    color:#D8D8F6;
+    padding:10px;
+    font-family: spaceman;
+
+}
+
 .title
 {
     background-image: url(images/transparencyBar.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     font-family: spaceman;
-    font-size:xx-large;
+    font-size:50px;
     text-align:center;
     align-content:center;
     color:#D8D8F6;
     padding:10px;
+    position: relative;
     margin-top:20px;
-    margin-left:20%;
-    margin-right:20%;
+    margin:auto;
+}
+
+.background
+{   
+    left:0%;
+    -webkit-transition: all 120s ease;
+  -moz-transition: all 120s ease;
+  -o-transition: all 120s ease;
+   transition: all 120s ease;
+    margin-top:10%;
 }
 
 .ship1
 {   
     position:fixed;    
-    left:-10%;
+    left:0%;
+   -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -o-transition: all .25s ease;
+   transition: all .25s ease;
     margin-top:10%;
 }
 
 .ship2 
 {    
     position:fixed;    
-    left:-10%;  
+    left:0%;  
+    -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -o-transition: all .25s ease;
+   transition: all .25s ease;
     margin-top:20%;
 }
 
 .goLight
 {
-    overflow:auto;
-    float:left;
+    text-align:center;
     position:fixed;
-    margin-top:20px;
+    float:right;
+    bottom: 3%;
+    right: 3%;
 }
+
+a
+{
+    display:inline-block;
+    background-image: url(srimages/RedLight.png);
+    background-repeat: no-repeat;
+    background-size: 100px 100px;
+    width: 100px;
+    height: 100px;
+}
+
+
 
 
