--- a/MainStyle.css
+++ b/MainStyle.css
@@ -16,23 +16,25 @@ body
     background-image: url(srimages/Stars.jpg);
     background-repeat: no-repeat;
     background-size:cover;
+    position: fixed;
 
 }
 
 .message
 {
-    visibility:visible;
-    position:fixed;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 15%;
-    width: 70%;
-    font-size:50px;
+    background-image:none;
+   border:solid 2px #7AE7C7; 
+    font-family: spaceman;
+    font-size:30px;
     text-align:center;
     align-content:center;
     color:#D8D8F6;
     padding:10px;
-    font-family: spaceman;
+    position: fixed;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 20%;
+    width: 60%;
 
 }
 
@@ -47,9 +49,11 @@ body
     align-content:center;
     color:#D8D8F6;
     padding:10px;
-    position: relative;
-    margin-top:20px;
-    margin:auto;
+    position: fixed;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 2%;
+    width: 70%;
 }
 
 .background
@@ -62,26 +66,15 @@ body
     margin-top:10%;
 }
 
-.ship1
+.ship
 {   
-    position:fixed;    
+    position:relative;    
     left:0%;
-   -webkit-transition: all .25s ease;
-  -moz-transition: all .25s ease;
-  -o-transition: all .25s ease;
-   transition: all .25s ease;
-    margin-top:10%;
-}
-
-.ship2 
-{    
-    position:fixed;    
-    left:0%;  
-    -webkit-transition: all .25s ease;
-  -moz-transition: all .25s ease;
-  -o-transition: all .25s ease;
-   transition: all .25s ease;
-    margin-top:20%;
+   -webkit-transition: all .5s ease;
+  -moz-transition: all .5s ease;
+  -o-transition: all .5s ease;
+   transition: all .5s ease;
+   
 }
 
 .goLight
