--- a/MainStyle.css
+++ b/MainStyle.css
@@ -10,14 +10,38 @@
             src: url('fonts/AUdimat-Regular.otf');
         }
 
-body 
-{
-    background-color: black;
+.overlay{
+  position:fixed;
+  background-color: black;
     background-image: url(srimages/Stars.jpg);
-    background-repeat: no-repeat;
-    background-size:cover;
-    position: fixed;
+  -webkit-animation:100s scroll infinite linear;
+  -moz-animation:100s scroll infinite linear;
+  -o-animation:100s scroll infinite linear;
+  animation:100s scroll infinite linear;
+  top:0;
+  left:0;
+  width:100%;
+ height:100%;
+ z-index:-1;
+ overflow:auto;
+}
 
+@-moz-keyframes scroll{
+  100%{
+    background-position:-3000px 0px;
+  }
+}
+
+@-o-keyframes scroll{
+  100%{
+    background-position:-3000px 0px;
+  }
+}
+
+@keyframes scroll{
+  100%{
+    background-position:-3000px 0px;
+  }
 }
 
 .message
@@ -31,10 +55,13 @@ body
     color:#D8D8F6;
     padding:10px;
     position: fixed;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 30%;
+    margin-right: 30%;
     margin-top: 20%;
-    width: 60%;
+    margin-bottom: auto;
+    width: 40%;
+    height: auto;
+    z-index: 100;
 
 }
 
@@ -50,31 +77,29 @@ body
     color:#D8D8F6;
     padding:10px;
     position: fixed;
-    margin-left: 15%;
-    margin-right: 15%;
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
     margin-top: 2%;
-    width: 70%;
-}
-
-.background
-{   
-    left:0%;
-    -webkit-transition: all 120s ease;
-  -moz-transition: all 120s ease;
-  -o-transition: all 120s ease;
-   transition: all 120s ease;
-    margin-top:10%;
 }
 
 .ship
 {   
-    position:relative;    
+    position:fixed;    
     left:0%;
-   -webkit-transition: all .5s ease;
-  -moz-transition: all .5s ease;
-  -o-transition: all .5s ease;
-   transition: all .5s ease;
-   
+   -webkit-transition: all .25s ease;
+  -moz-transition: all .25s ease;
+  -o-transition: all .25s ease;
+   transition: all .25s ease;
+   z-index: 100;
+}
+
+.trasition
+{
+ -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+   transition: all 1s ease;
 }
 
 .goLight
@@ -82,8 +107,9 @@ body
     text-align:center;
     position:fixed;
     float:right;
-    bottom: 3%;
-    right: 3%;
+    top: 3%;
+   right: 3%;
+    z-index: 100;
 }
 
 a
@@ -94,6 +120,12 @@ a
     background-size: 100px 100px;
     width: 100px;
     height: 100px;
+}
+
+a:hover{
+
+    text-decoration:none;
+    cursor: pointer;
 }
 
 
