--- a/MainStyle.css
+++ b/MainStyle.css
@@ -49,7 +49,7 @@
     background-image:none;
    border:solid 2px #7AE7C7; 
     font-family: spaceman;
-    font-size:30px;
+    font-size:large;
     text-align:center;
     align-content:center;
     color:#D8D8F6;
@@ -71,7 +71,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     font-family: spaceman;
-    font-size:50px;
+    font-size:xx-large;
     text-align:center;
     align-content:center;
     color:#D8D8F6;
