--- a/MainStyle.css
+++ b/MainStyle.css
@@ -22,7 +22,23 @@
   left:0;
   width:100%;
  height:100%;
- z-index:-1;
+ z-index:-2;
+ overflow:auto;
+}
+
+.overlay2{
+  position:fixed;
+  background-color: black;
+    background-image: url(srimages/Stars2.png);
+  -webkit-animation:50s scroll2 infinite linear;
+  -moz-animation:50s scroll2 infinite linear;
+  -o-animation:50s scroll2 infinite linear;
+  animation:50s scroll2 infinite linear;
+  top:0;
+  left:0;
+  width:100%;
+ height:100%;
+ z-index:1;
  overflow:auto;
 }
 
@@ -39,6 +55,24 @@
 }
 
 @keyframes scroll{
+  100%{
+    background-position:-3000px 0px;
+  }
+}
+
+@-moz-keyframes scroll2{
+  100%{
+    background-position:-3000px 0px;
+  }
+}
+
+@-o-keyframes scroll2{
+  100%{
+    background-position:-3000px 0px;
+  }
+}
+
+@keyframes scroll2{
   100%{
     background-position:-3000px 0px;
   }
