--- a/MainStyle.css
+++ b/MainStyle.css
@@ -13,7 +13,7 @@
 .overlay{
   position:fixed;
   background-color: black;
-    background-image: url(srimages/Stars.jpg);
+    background-image: url(srimages/Stars.png);
   -webkit-animation:100s scroll infinite linear;
   -moz-animation:100s scroll infinite linear;
   -o-animation:100s scroll infinite linear;
@@ -28,17 +28,16 @@
 
 .overlay2{
   position:fixed;
-  background-color: black;
     background-image: url(srimages/Stars2.png);
-  -webkit-animation:50s scroll2 infinite linear;
-  -moz-animation:50s scroll2 infinite linear;
-  -o-animation:50s scroll2 infinite linear;
-  animation:50s scroll2 infinite linear;
+  -webkit-animation:90s scroll2 infinite linear;
+  -moz-animation:90s scroll2 infinite linear;
+  -o-animation:90s scroll2 infinite linear;
+  animation:90s scroll2 infinite linear;
   top:0;
   left:0;
   width:100%;
  height:100%;
- z-index:1;
+ z-index:-1;
  overflow:auto;
 }
 
