--- a/MainStyle.css
+++ b/MainStyle.css
@@ -14,10 +14,25 @@
   position:fixed;
   background-color: black;
     background-image: url(srimages/Stars.png);
-  -webkit-animation:100s scroll infinite linear;
-  -moz-animation:100s scroll infinite linear;
-  -o-animation:100s scroll infinite linear;
-  animation:100s scroll infinite linear;
+  -webkit-animation:200s scroll infinite linear;
+  -moz-animation:200s scroll infinite linear;
+  -o-animation:200s scroll infinite linear;
+  animation:200s scroll infinite linear;
+  top:0;
+  left:0;
+  width:100%;
+ height:100%;
+ z-index:-3;
+ overflow:auto;
+}
+
+.overlay2{
+  position:fixed;
+    background-image: url(srimages/Stars2.png);
+ -webkit-animation:190s scroll infinite linear;
+  -moz-animation:190s scroll infinite linear;
+  -o-animation:190s scroll infinite linear;
+  animation:190s scroll infinite linear;
   top:0;
   left:0;
   width:100%;
@@ -26,13 +41,13 @@
  overflow:auto;
 }
 
-.overlay2{
+.overlay3{
   position:fixed;
-    background-image: url(srimages/Stars2.png);
-  -webkit-animation:90s scroll2 infinite linear;
-  -moz-animation:90s scroll2 infinite linear;
-  -o-animation:90s scroll2 infinite linear;
-  animation:90s scroll2 infinite linear;
+    background-image: url(srimages/Stars3.png);
+ -webkit-animation:180s scroll infinite linear;
+  -moz-animation:180s scroll infinite linear;
+  -o-animation:180s scroll infinite linear;
+  animation:180s scroll infinite linear;
   top:0;
   left:0;
   width:100%;
@@ -59,23 +74,6 @@
   }
 }
 
-@-moz-keyframes scroll2{
-  100%{
-    background-position:-3000px 0px;
-  }
-}
-
-@-o-keyframes scroll2{
-  100%{
-    background-position:-3000px 0px;
-  }
-}
-
-@keyframes scroll2{
-  100%{
-    background-position:-3000px 0px;
-  }
-}
 
 .message
 {
@@ -120,10 +118,10 @@
 {   
     position:fixed;    
     left:0%;
-   -webkit-transition: all .25s ease;
-  -moz-transition: all .25s ease;
-  -o-transition: all .25s ease;
-   transition: all .25s ease;
+   -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -o-transition: all .2s ease;
+   transition: all .2s ease;
    z-index: 100;
 }
 
