--- a/MainStyle.css
+++ b/MainStyle.css
@@ -118,10 +118,10 @@
 {   
     position:fixed;    
     left:0%;
-   -webkit-transition: all 1.5s ease;
-  -moz-transition: all 1.5s ease;
-  -o-transition: all 1.5s ease;
-   transition: all 1.5s ease;
+   -webkit-transition: all 1s linear;
+  -moz-transition: all 1s linear;
+  -o-transition: all 1s linear;
+   transition: all 1s linear;
    z-index: 100;
 }
 
