--- a/MainStyle.css
+++ b/MainStyle.css
@@ -102,7 +102,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     font-family: spaceman;
-    font-size:xx-large;
+    font-size:40px;
     text-align:center;
     align-content:center;
     color:#D8D8F6;
