--- a/MainStyle.css
+++ b/MainStyle.css
@@ -23,7 +23,7 @@
   width:100%;
  height:100%;
  z-index:-3;
- overflow:auto;
+ 
 }
 
 .overlay2{
@@ -38,7 +38,7 @@
   width:100%;
  height:100%;
  z-index:-2;
- overflow:auto;
+
 }
 
 .overlay3{
@@ -53,7 +53,7 @@
   width:100%;
  height:100%;
  z-index:-1;
- overflow:auto;
+
 }
 
 @-moz-keyframes scroll{
@@ -102,7 +102,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     font-family: spaceman;
-    font-size:40px;
+    font-size:xx-large;
     text-align:center;
     align-content:center;
     color:#D8D8F6;
@@ -116,13 +116,15 @@
 
 .ship
 {   
-    position:fixed;    
+    position:relative;    
     left:0%;
    -webkit-transition: all .5s linear;
   -moz-transition: all .5s linear;
   -o-transition: all .5s linear;
    transition: all .5s linear;
-   z-index: 100;
+   z-index: 5;
+   margin-top: 4%;
+   overflow: hidden;
 }
 
 .trasition
@@ -157,6 +159,12 @@ a:hover{
 
     text-decoration:none;
     cursor: pointer;
+}
+
+body, html
+{
+    max-width: 100%;
+    overflow: hidden;
 }
 
 
