--- a/MainStyle.css
+++ b/MainStyle.css
@@ -78,9 +78,9 @@
 .message
 {
     background-image:none;
-   border:solid 2px #7AE7C7; 
+   border:none; 
     font-family: spaceman;
-    font-size:large;
+    font-size:x-large;
     text-align:center;
     align-content:center;
     color:#D8D8F6;
