--- a/MainStyle.css
+++ b/MainStyle.css
@@ -10,70 +10,21 @@
             src: url('fonts/AUdimat-Regular.otf');
         }
 
-.overlay{
+.overlay
+{
   position:fixed;
-  background-color: black;
-    background-image: url(srimages/Stars.png);
-  -webkit-animation:300s scroll infinite linear;
-  -moz-animation:300s scroll infinite linear;
-  -o-animation:300s scroll infinite linear;
-  animation:300s scroll infinite linear;
+  background-repeat:repeat;
+  overflow:auto;  
+  -webkit-transition: all .5s linear;
+  -moz-transition: all .5s linear;
+  -o-transition: all .5s linear;
+   transition: all .5s linear;
   top:0;
   left:0;
-  width:100%;
- height:100%;
- z-index:-3;
- 
+  width:2000%;
+ height:2000%;
+ z-index:-1; 
 }
-
-.overlay2{
-  position:fixed;
-    background-image: url(srimages/Stars2.png);
- -webkit-animation:275s scroll infinite linear;
-  -moz-animation:275s scroll infinite linear;
-  -o-animation:275s scroll infinite linear;
-  animation:275s scroll infinite linear;
-  top:0;
-  left:0;
-  width:100%;
- height:100%;
- z-index:-2;
-
-}
-
-.overlay3{
-  position:fixed;
-    background-image: url(srimages/Stars3.png);
- -webkit-animation:250s scroll infinite linear;
-  -moz-animation:250s scroll infinite linear;
-  -o-animation:250s scroll infinite linear;
-  animation:250s scroll infinite linear;
-  top:0;
-  left:0;
-  width:100%;
- height:100%;
- z-index:-1;
-
-}
-
-@-moz-keyframes scroll{
-  100%{
-    background-position:-3000px 0px;
-  }
-}
-
-@-o-keyframes scroll{
-  100%{
-    background-position:-3000px 0px;
-  }
-}
-
-@keyframes scroll{
-  100%{
-    background-position:-3000px 0px;
-  }
-}
-
 
 .message
 {
@@ -132,15 +83,6 @@
  
 }
 
-.backgrounds
-{
-    position:absolute;
-   -webkit-transition: all .5s linear;
-  -moz-transition: all .5s linear;
-  -o-transition: all .5s linear;
-   transition: all .5s linear;
-}
-
 .goLight
 {
     text-align:center;
@@ -168,8 +110,7 @@ a:hover{
 }
 
 body, html
-{
-    max-width: 100%;
+{    
     overflow: hidden;
 }
 
